# MiniShell

./: CMakeLists.txt  Makefile  README.md  ft_atoi.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  get_next_line.c  get_next_line.h  get_next_line_utils.c  main.c  my_builtin.c  my_builtin2.c  my_cmd_parser.c  my_cmd_parser_helper.c  my_cmd_parser_parts.c  my_executer.c  my_executer_helper.c  my_minishell.h  my_split_controlls.c  my_split_controlls_helper.c  my_status_solver.c  my_status_solver_helper.c  test.txt
